Fixed text getting cut off on phones

--- a/home-page.css
+++ b/home-page.css
@@ -111,12 +111,13 @@ br{
   }
 
   h1{
-    font-size: 5.2rem;
+    margin-top: 5rem;
+    font-size: 3.6rem;
     
   }
 
   h2{
-    font-size: 2.4rem;
+    font-size: 1.8rem;
     word-wrap: unset;
   }
 
